# 2026-TeamControl

./: .gitignore  main.py  main_bt_6v6.py  pyproject.toml
behaviour_tree/: cmd_mgr.py  common_trees.py  striker_tree.py
docs/: Modules.md  SSL-NetworkPorts.md  real-robot-networking.md
src/TeamControl/Examples/: go_to_ball_and_shoot.py
src/TeamControl/bt/: actuator.py  adapter.py  command_composer.py  coordinator.py  pd_controller.py  run_bt_v2_process.py  skill_intent_executor.py
src/TeamControl/dispatcher/: dispatch.py
src/TeamControl/harness/: constants.py  csv_logger.py  grSim_runner.py  harness.py  smoke_test.py  test_script.py
src/TeamControl/network/: receiver.py
src/TeamControl/process_workers/: gcfsm_runner.py  robot_recv_runner.py  vision_runner.py
src/TeamControl/robot/: Movement.py  constants.py  striker.py  unittest.py
src/TeamControl/ui/: dashboard_page.py  dispatcher_panel.py  field_canvas.py  main_window.py  test_panel.py
src/TeamControl/utils/: ipconfig.yaml  robot_recv_test.py
src/TeamControl/world/: model.py
src/teamcontrol/config/: __init__.py  defaults.yaml  settings.py
src/teamcontrol/core/: __init__.py  cache.py  events.py  worker.py
src/teamcontrol/network/: __init__.py
src/teamcontrol/robot/: constants.py
src/teamcontrol/ssl/: __init__.py
src/teamcontrol/strategy/: __init__.py
src/teamcontrol/utils/: __init__.py  logger.py  maths.py
src/teamcontrol/world/: __init__.py  manager.py  model.py
tests/: test_cache.py  test_config.py
tests/bt/: test_coordinator.py  test_goalie_tree.py
(+11 files in other folders)
